--- a/wp-content/themes/theme-vgl/scss/sass/widgets-gutenberg/image-text.scss
+++ b/wp-content/themes/theme-vgl/scss/sass/widgets-gutenberg/image-text.scss
@@ -3,15 +3,16 @@
         display: grid;
         grid-template-columns: repeat(2, 50%);
 
-        .image-text-text {
+        .image-text-block {
             background: $primary;
-
-            .image-text-text-p {
-                display: block;
-                height: auto;
-                margin: auto;
-                padding: 100px;
+            display: block;
+            height: auto;
+            padding: 100px;
+            .image-text-title {
+              
             }
+
+            .image-text-text {}
         }
 
         .image-text-img {
@@ -23,5 +24,6 @@
                 padding: 20px;
             }
         }
+
     }
 }
